# bevy_jam_2

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  wasm-build.sh
.cargo/: config.toml
2022/: index.html
assets/asperite_files/: crafting_tables.aseprite  knight.aseprite  page.aseprite  proto_kitchen.aseprite  shaved_ice.aseprite  tavern_keeper_proto.aseprite  utter_ice_cream.aseprite
assets/elements/: test_item.json
assets/recipes/furnace/: test_furnace_recipe.json
assets/recipes/mixer/: test_mixer_recipe.json
assets/recipes/slicer/: test_slicer_recipe.json
src/: audio.rs  boss_fight.rs  element.rs  furnace.rs  game.rs  gameflow.rs  helper.rs  main.rs  mixer.rs  npc.rs  page.rs  quest.rs  registry.rs  slicer.rs  ui.rs
