[package]
name = "bevy_jam_2"
version = "0.1.0"
edition = "2021"
authors = ["Gearhartlove", "MrVintage710"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.0"
bevy-inspector-egui = "0.12.1"
bevy_rapier2d = "0.16.1"