[package]
name = "bevy_jam_2"
version = "0.1.0"
edition = "2021"
authors = ["Gearhartlove", "MrVintage710"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
#bevy = "0.8.0"
serde = "1.0.143"
serde_json = "1.0.83"
convert_case = "0.5.0"
scan_dir = "0.3.3"
bevy-inspector-egui = "0.12.1"
bevy_rapier2d = "0.16.1"
bevy_prototype_debug_lines = "0.8"