[package]
name = "bevy_jam_2"
version = "0.1.0"
edition = "2021"
authors = ["Gearhartlove", "MrVintage710"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

#[features]
#dev = [
#    "bevy/dynamic",
#]


[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.12", features = ["wav"] }
rand = { version = "0.8.3" }
imagesize = "0.10.0"
convert_case = "0.5.0"
bevy-inspector-egui = "0.12.1"
bevy_prototype_debug_lines = "0.8"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"

